--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
 	"author": "szean",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.21.1"
+		"express": "^4.21.1",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.7.2"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.7"
