--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
