--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node server.js",
+		"migrate": "node utils/migrate.js",
 		"dev": "nodemon server.js"
 	},
 	"keywords": [],
