--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"concurrently": "^9.0.1"
 	},
 	"dependencies": {
-		"dotenv": "^16.4.5"
+		"dotenv": "^16.4.5",
+		"lottie-react": "^2.4.1"
 	}
 }
