--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"jwt-decode": "^4.0.0",
+		"lottie-react": "^2.4.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-feather": "^2.0.10",
@@ -23,11 +24,11 @@
 		"@typescript-eslint/eslint-plugin": "^8.19.0",
 		"@typescript-eslint/parser": "^8.19.0",
 		"@vitejs/plugin-react": "^4.3.3",
+		"country-flag-icons": "^1.5.18",
 		"eslint": "^9.17.0",
 		"eslint-plugin-react": "^7.37.1",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.13",
-		"country-flag-icons": "^1.5.18",
 		"globals": "^15.11.0",
 		"typescript": "^5.7.2",
 		"vite": "^5.4.9"
