--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"concurrently": "^9.0.1"
 	},
 	"dependencies": {
-		"dotenv": "^16.4.5"
+		"@tailwindcss/vite": "^4.0.14",
+		"dotenv": "^16.4.5",
+		"tailwindcss": "^4.0.14"
 	}
 }
