--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"clsx": "^2.1.1",
 		"jwt-decode": "^4.0.0",
 		"lottie-react": "^2.4.1",
 		"react": "^18.3.1",
